made some updates

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -22,12 +22,12 @@ padding-right = 1
 module-margin-left = 2
 
 modules-left = launcher bspwm
-modules-center =
-modules-right = filesystem memory cpu temperature fanspeed pulseaudio wlan battery date
+modules-center = date
+modules-right = backlight filesystem memory cpu temperature fanspeed pulseaudio wlan battery powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
-tray-position = right
+tray-position = none
 tray-padding = 2
 
 wm-restack = bspwm
@@ -51,8 +51,8 @@ padding-right = 1
 module-margin-left = 2
 
 modules-left = launcher bspwm
-modules-center =
-modules-right = filesystem memory cpu temperature fanspeed pulseaudio wlan battery date
+modules-center = date
+modules-right = backlight filesystem memory cpu temperature fanspeed pulseaudio wlan battery powermenu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
