--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -8,9 +8,9 @@ format-prefix-foreground = ${colors.white}
 label = CPU %percentage:0%%
 label-foreground = ${colors.white}
 
-ramp-load-0 = 󰍛 
+ramp-load-0 = "󰍛"
 ramp-load-font = 3
-ramp-load-foreground = ${colors.yellow}  
+ramp-load-foreground = ${colors.green}
 
 [module/backlight]
 type = internal/backlight
@@ -26,7 +26,7 @@ label-foreground = ${colors.white}
 
 ramp-0 = 󰃠
 
-ramp-foreground = ${colors.white}
+ramp-foreground = ${colors.cyan}
 
 [module/bspwm]
 type = internal/bspwm
@@ -65,7 +65,7 @@ date-alt = " %Y-%m-%d"
 time = %I:%M %p%{F-}
 time-alt = %{F#ffffff}󰃭 %a, %b %d%{F-}
 
-format-prefix = 󰥔  
+format-prefix = "󰥔"
 format-prefix-foreground = ${colors.white}
 
 label = %date% %time%
@@ -75,8 +75,8 @@ label-foreground = ${colors.white}
 type = custom/script
 exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
 
-format-prefix = "󰆼 "  
-format-prefix-foreground = ${colors.cyan}
+format-prefix = "  "
+format-prefix-foreground = ${colors.orange}
 label = %output% MB
 label-foreground = ${colors.white}
 
@@ -92,7 +92,7 @@ label-muted-foreground = ${colors.red}
 
 ramp-volume-0 = 󰕾
 
-ramp-volume-foreground = ${colors.yellow}
+ramp-volume-foreground = ${colors.purple}
 
 click-right = pavucontrol &
 
@@ -124,7 +124,7 @@ click-left = ~/.config/scripts/powermenu
 [module/fanspeed]
 type = custom/script
 format-prefix = 󰈐
-format-prefix-foreground = ${colors.purple}
+format-prefix-foreground = ${colors.pink}
 exec = ~/.config/scripts/fanspeed
 interval = 10
 
@@ -134,15 +134,16 @@ interface = wlo1
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
-label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
+label-connected =%{A1:alacritty -e nmtui &:}Connected%{A}
+;label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
 label-connected-foreground = ${colors.white}
 
 format-disconnected = <label-disconnected>
-label-disconnected = %{A1:alacritty -e nmtui &:}󰖪%{A}
+label-disconnected = %{A1:alacritty -e nmtui &:}󰖪 Disconnected%{A}
 label-disconnected-foreground = ${colors.red}
 
 ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰖩%{A}
-ramp-signal-foreground = ${colors.blue}
+ramp-signal-foreground = ${colors.orange}
 
 [module/battery]
 type = internal/battery
@@ -150,31 +151,29 @@ battery = BAT0
 adapter = AC0
 full-at = 98
 
-format-full = <ramp-capacity> <label-full> 
+format-full = <ramp-capacity>
 label-full-foreground = ${colors.white}
 
-format-charging = <animation-charging> <label-charging>
-label-charging-foreground = ${colors.white} 
+format-charging = <animation-charging>
+label-charging-foreground = ${colors.white}
 
-animation-charging-0 = 󰁻
-animation-charging-1 = 󰁽
-animation-charging-2 = 󰁿
-animation-charging-3 = 󰂁 
-animation-charging-4 = 󰁹
+animation-charging-0 = " "
+animation-charging-1 = " "
+animation-charging-2 = " "
+animation-charging-3 = " "
+animation-charging-4 = " "
 
 animation-charging-foreground = ${colors.green}
 animation-charging-framerate = 750
 
-format-discharging = <ramp-capacity> <label-discharging>
+format-discharging = <ramp-capacity>
 label-discharging-foreground = ${colors.white}
 
-ramp-capacity-0 = 󰁻
-ramp-capacity-1 = 󰁽
-ramp-capacity-2 = 󰁿
-ramp-capacity-3 = 󰂁
-ramp-capacity-4 = 󰁹
-
-ramp-capacity-foreground = ${colors.green}
+ramp-capacity-0 = "%{F#FF6E6E} %{F-}"
+ramp-capacity-1 = "%{F#FF6E6E} %{F-}"
+ramp-capacity-2 = "%{F#69FF94} %{F-}"
+ramp-capacity-3 = "%{F#69FF94} %{F-}"
+ramp-capacity-4 = "%{F#69FF94} %{F-}"
 
 [module/filesystem]
 type = internal/fs
