--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,6 +1,7 @@
 [colors]
 background = #1A1A1A
 foreground = #FFFFFF
+secondary  = #808080
 white  = #FFFFFF
 cyan   = #A4FFFF
 green  = #69FF94
@@ -9,4 +10,4 @@ pink   = #FF79C6
 purple = #BD93F9
 red    = #FF6E6E
 yellow = #FFFFA5
-grey   = #808080
+grey   = #262626
