--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,18 +17,19 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 
 padding-left = 1
-padding-right = 1
+padding-right = 0
 
-module-margin-left = 2
+module-margin-left = 0
 
-modules-left = launcher bspwm
-modules-center = date
-modules-right = backlight filesystem memory cpu temperature fanspeed pulseaudio wlan battery powermenu
+modules-left = sep launcher bspwm sep2
+modules-center =
+modules-right = backlight filesystem memory cpu temperature fanspeed wlan date sep pulseaudio battery powermenu sep2
 
 include-file = $HOME/.config/polybar/fonts.ini
 
 tray-position = none
 tray-padding = 2
+tray-background = ${colors.grey}
 
 wm-restack = bspwm
 
@@ -46,13 +47,14 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 
 padding-left = 1
-padding-right = 1
+padding-right = 0
 
-module-margin-left = 2
+margin-top = 5
+module-margin-left = 0
 
-modules-left = launcher bspwm
-modules-center = date
-modules-right = backlight filesystem memory cpu temperature fanspeed pulseaudio wlan battery powermenu
+modules-left = sep launcher bspwm sep2
+modules-center =
+modules-right = backlight filesystem memory cpu temperature fanspeed wlan date sep pulseaudio battery powermenu sep2
 
 include-file = $HOME/.config/polybar/fonts.ini
 
