--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -8,7 +8,7 @@ format-prefix-foreground = ${colors.white}
 label = CPU %percentage:0%%
 label-foreground = ${colors.white}
 
-ramp-load-0 = "󰍛"
+ramp-load-0 = "  󰍛"
 ramp-load-font = 3
 ramp-load-foreground = ${colors.green}
 
@@ -41,10 +41,12 @@ ws-icon-default = "♟ "
 format = <label-state>
 
 label-focused = [ %icon% ]
+label-focused-background = ${colors.grey}
 label-focused-foreground = ${colors.red}
 label-focused-padding = 1
 
 label-occupied = %icon%
+label-occupied-background = ${colors.grey}
 label-occupied-padding = 1
 
 label-urgent = %icon%
@@ -52,7 +54,8 @@ label-urgent-background = ${colors.red}
 label-urgent-padding = 1
 
 label-empty = %icon%
-label-empty-foreground = ${colors.grey}
+label-empty-background = ${colors.grey}
+label-empty-foreground = ${colors.secondary}
 label-empty-padding = 1
 
 [module/date]
@@ -62,10 +65,10 @@ interval = 5
 date =
 date-alt = " %Y-%m-%d"
 
-time = %I:%M %p%{F-}
-time-alt = %{F#ffffff}󰃭 %a, %b %d%{F-}
+time = "%I:%M %p%{F-} "
+time-alt = "%{F#ffffff}󰃭 %a, %b %d%{F-} "
 
-format-prefix = "󰥔"
+format-prefix = "  󰥔"
 format-prefix-foreground = ${colors.white}
 
 label = %date% %time%
@@ -75,7 +78,7 @@ label-foreground = ${colors.white}
 type = custom/script
 exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
 
-format-prefix = "  "
+format-prefix = "    "
 format-prefix-foreground = ${colors.orange}
 label = %output% MB
 label-foreground = ${colors.white}
@@ -83,15 +86,18 @@ label-foreground = ${colors.white}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume =<ramp-volume> <label-volume>
+format-volume =<ramp-volume>
 label-volume = %percentage%%
 label-volume-foreground = ${colors.white}
 
-label-muted =󰖁 MUTED
+label-muted = "󰖁"
+
+label-muted-background = ${colors.grey}
 label-muted-foreground = ${colors.red}
 
-ramp-volume-0 = 󰕾
+ramp-volume-0 = "󰕾"
 
+ramp-volume-background = ${colors.grey}
 ramp-volume-foreground = ${colors.purple}
 
 click-right = pavucontrol &
@@ -107,7 +113,7 @@ format-warn = <ramp> <label-warn>
 label = %temperature-c%
 label-warn = %temperature-c%
 
-ramp-0 = 󰔐
+ramp-0 = "  󰔐"
 
 label-foreground = ${colors.white}
 label-warn-foreground = ${colors.red}
@@ -116,14 +122,16 @@ ramp-foreground = ${colors.red}
 [module/powermenu]
 type = custom/text
 
-content = 󰤆
+content = " 󰤆"
+
+content-background = ${colors.grey}
 content-foreground = ${colors.red}
 
 click-left = ~/.config/scripts/powermenu
 
 [module/fanspeed]
 type = custom/script
-format-prefix = 󰈐
+format-prefix = "  󰈐"
 format-prefix-foreground = ${colors.pink}
 exec = ~/.config/scripts/fanspeed
 interval = 10
@@ -134,15 +142,14 @@ interface = wlo1
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
-label-connected =%{A1:alacritty -e nmtui &:}Connected%{A}
-;label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
+label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
 label-connected-foreground = ${colors.white}
 
 format-disconnected = <label-disconnected>
-label-disconnected = %{A1:alacritty -e nmtui &:}󰖪 Disconnected%{A}
+label-disconnected = %{A1:alacritty -e nmtui &:}  󰖪 Disconnected%{A}
 label-disconnected-foreground = ${colors.red}
 
-ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰖩%{A}
+ramp-signal-0 = %{A1:alacritty -e nmtui &:}  󰖩%{A}
 ramp-signal-foreground = ${colors.orange}
 
 [module/battery]
@@ -157,23 +164,26 @@ label-full-foreground = ${colors.white}
 format-charging = <animation-charging>
 label-charging-foreground = ${colors.white}
 
-animation-charging-0 = " "
-animation-charging-1 = " "
-animation-charging-2 = " "
-animation-charging-3 = " "
-animation-charging-4 = " "
+animation-charging-0 = "    "
+animation-charging-1 = "    "
+animation-charging-2 = "    "
+animation-charging-3 = "    "
+animation-charging-4 = "    "
 
+animation-charging-background = ${colors.grey}
 animation-charging-foreground = ${colors.green}
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity>
 label-discharging-foreground = ${colors.white}
 
-ramp-capacity-0 = "%{F#FF6E6E} %{F-}"
-ramp-capacity-1 = "%{F#FF6E6E} %{F-}"
-ramp-capacity-2 = "%{F#69FF94} %{F-}"
-ramp-capacity-3 = "%{F#69FF94} %{F-}"
-ramp-capacity-4 = "%{F#69FF94} %{F-}"
+ramp-capacity-0 = "%{F#FF6E6E}    %{F-}"
+ramp-capacity-1 = "%{F#FF6E6E}    %{F-}"
+ramp-capacity-2 = "%{F#69FF94}    %{F-}"
+ramp-capacity-3 = "%{F#69FF94}    %{F-}"
+ramp-capacity-4 = "%{F#69FF94}    %{F-}"
+
+ramp-capacity-background = ${colors.grey}
 
 [module/filesystem]
 type = internal/fs
@@ -196,12 +206,12 @@ fixed-values = true
 ;;spacing = 4
 
 format-mounted = <label-mounted>
-format-mounted-prefix = "󰇑 "
+format-mounted-prefix = "  󰇑 "
 format-mounted-prefix-font = 3
 format-mounted-prefix-foreground = ${colors.purple}
 
 format-unmounted = <label-unmounted>
-format-unmounted-prefix = 󰇑
+format-unmounted-prefix = "  󰇑"
 
 ; Available tokens:
 ;   %mountpoint%
@@ -223,14 +233,30 @@ ramp-capacity-framerate = 750
 type = custom/text
 
 content = 󰂯
+content-foreground = ${colors.cyan}
 
 click-left = ~/.config/scripts/toggle-bluetooth
+
+click-right = blueman-manager &
 
 [module/launcher]
 type = custom/text
 
-content = 󰣇
+content = "󰣇 "
 
+content-background = ${colors.grey}
 content-foreground = ${colors.cyan}
 
 click-left = rofi -no-lazy-grab -show drun -theme $HOME/.config/rofi/themes/launcher.rasi
+
+[module/sep]
+type = custom/text
+content = ""
+content-foreground = ${colors.grey}
+content-font = 4
+
+[module/sep2]
+type = custom/text
+content = " "
+content-foreground = ${colors.grey}
+content-font = 4
