updated some files

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -24,7 +24,7 @@ format = <ramp> <label>
 label = %percentage%%
 label-foreground = ${colors.white}
 
-ramp-0 = 󰃠
+ramp-0 = "󰃠"
 
 ramp-foreground = ${colors.cyan}
 
@@ -206,7 +206,7 @@ fixed-values = true
 ;;spacing = 4
 
 format-mounted = <label-mounted>
-format-mounted-prefix = "  󰇑 "
+format-mounted-prefix = "  󰉋 "
 format-mounted-prefix-font = 3
 format-mounted-prefix-foreground = ${colors.purple}
 
