updated some files

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -22,7 +22,7 @@ module-margin-left = 0
 
 modules-left = sep launcher bspwm sep2
 modules-center =
-modules-right = backlight filesystem memory cpu temperature fanspeed wlan date sep pulseaudio battery powermenu sep2
+modules-right = backlight filesystem memory cpu temperature fanspeed date sep pulseaudio wlan battery powermenu sep2
 
 include-file = $HOME/.config/polybar/fonts.ini
 
@@ -49,11 +49,11 @@ padding-left = 1
 
 modules-left = sep launcher bspwm sep2
 modules-center =
-modules-right = backlight filesystem memory cpu temperature fanspeed wlan date sep pulseaudio battery powermenu sep2
+modules-right = backlight filesystem memory cpu temperature fanspeed date sep pulseaudio wlan battery powermenu sep2
 
 include-file = $HOME/.config/polybar/fonts.ini
 
-tray-position = none
+tray-position = right
 tray-padding = 10
 
 wm-restack = bspwm
