--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -31,29 +31,23 @@ ramp-foreground = ${colors.cyan}
 [module/bspwm]
 type = internal/bspwm
 
-ws-icon-0 = 1;TERM
-ws-icon-1 = 2;SYS
-ws-icon-2 = 3;WEB
-ws-icon-3 = 4;MUSIC
-ws-icon-4 = 5;GAME
-ws-icon-default = "♟ "
+format = <label-state> <label-mode>
 
-format = <label-state>
-
-label-focused = [ %icon% ]
+label-focused = 󰄯
 label-focused-background = ${colors.grey}
 label-focused-foreground = ${colors.red}
 label-focused-padding = 1
 
-label-occupied = %icon%
+label-occupied = 󰐾
 label-occupied-background = ${colors.grey}
+label-occupied-foreground = ${colors.secondary}
 label-occupied-padding = 1
 
-label-urgent = %icon%
-label-urgent-background = ${colors.red}
+label-urgent = 󰐾
+label-urgent-foreground = ${colors.red}
 label-urgent-padding = 1
 
-label-empty = %icon%
+label-empty = 󰄰
 label-empty-background = ${colors.grey}
 label-empty-foreground = ${colors.secondary}
 label-empty-padding = 1
@@ -141,16 +135,19 @@ type = internal/network
 interface = wlo1
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = <ramp-signal>
 label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
 label-connected-foreground = ${colors.white}
 
 format-disconnected = <label-disconnected>
-label-disconnected = %{A1:alacritty -e nmtui &:}  󰖪 Disconnected%{A}
+
+label-disconnected = %{A1:alacritty -e nmtui &:}  󰖪%{A}
 label-disconnected-foreground = ${colors.red}
+label-disconnected-background = ${colors.grey}
 
 ramp-signal-0 = %{A1:alacritty -e nmtui &:}  󰖩%{A}
 ramp-signal-foreground = ${colors.orange}
+ramp-signal-background = ${colors.grey}
 
 [module/battery]
 type = internal/battery
