--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -11,6 +11,9 @@ width = 100%
 height = 32
 fixed-center = true
 
+border-top-size = 6
+border-top-color = ${colors.background}
+
 line-size = 3
 
 background = ${colors.background}
@@ -40,6 +43,9 @@ width = 100%
 height = 32
 fixed-center = true
 
+border-top-size = 6
+border-top-color = ${colors.background}
+
 line-size = 3
 
 background = ${colors.background}
@@ -53,7 +59,7 @@ modules-right = backlight filesystem memory cpu temperature fanspeed date sep pu
 
 include-file = $HOME/.config/polybar/fonts.ini
 
-tray-position = right
+tray-position = none
 tray-padding = 10
 
 wm-restack = bspwm
