--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -8,7 +8,8 @@ format-prefix-foreground = ${colors.white}
 label = CPU %percentage:0%%
 label-foreground = ${colors.white}
 
-ramp-load-0 = "  󰍛"
+ramp-load-0 = "󰍛"
+ramp-load-padding-left = 2
 ramp-load-font = 3
 ramp-load-foreground = ${colors.green}
 
@@ -25,7 +26,7 @@ label = %percentage%%
 label-foreground = ${colors.white}
 
 ramp-0 = "󰃠"
-
+ramp-padding-left = 2
 ramp-foreground = ${colors.cyan}
 
 [module/bspwm]
@@ -59,11 +60,12 @@ interval = 5
 date =
 date-alt = " %Y-%m-%d"
 
-time = "%I:%M %p%{F-} "
-time-alt = "%{F#ffffff}󰃭 %a, %b %d%{F-} "
+time = "%I:%M %p%{F-}  "
+time-alt = "%{F#ffffff}󰃭 %a, %b %d%{F-}  "
 
-format-prefix = "  󰥔"
+format-prefix = "󰥔"
 format-prefix-foreground = ${colors.white}
+format-prefix-padding-left = 2
 
 label = %date% %time%
 label-foreground = ${colors.white}
@@ -72,8 +74,10 @@ label-foreground = ${colors.white}
 type = custom/script
 exec = free -m | sed -n 's/^Mem:\s\+[0-9]\+\s\+\([0-9]\+\)\s.\+/\1/p'
 
-format-prefix = "    "
+format-prefix = ""
 format-prefix-foreground = ${colors.orange}
+format-prefix-padding-left = 2
+format-prefix-padding-right = 2
 label = %output% MB
 label-foreground = ${colors.white}
 
@@ -86,13 +90,13 @@ label-volume-foreground = ${colors.white}
 
 label-muted = "󰖁"
 
-label-muted-background = ${colors.grey}
 label-muted-foreground = ${colors.red}
+label-muted-background = ${colors.grey}
 
 ramp-volume-0 = "󰕾"
 
-ramp-volume-background = ${colors.grey}
 ramp-volume-foreground = ${colors.purple}
+ramp-volume-background = ${colors.grey}
 
 click-right = pavucontrol &
 
@@ -107,8 +111,8 @@ format-warn = <ramp> <label-warn>
 label = %temperature-c%
 label-warn = %temperature-c%
 
-ramp-0 = "  󰔐"
-
+ramp-0 = "󰔐"
+ramp-padding-left = 2
 label-foreground = ${colors.white}
 label-warn-foreground = ${colors.red}
 ramp-foreground = ${colors.red}
@@ -117,7 +121,6 @@ ramp-foreground = ${colors.red}
 type = custom/text
 
 content = " 󰤆"
-
 content-background = ${colors.grey}
 content-foreground = ${colors.red}
 
@@ -125,7 +128,8 @@ click-left = ~/.config/scripts/powermenu
 
 [module/fanspeed]
 type = custom/script
-format-prefix = "  󰈐"
+format-prefix = "󰈐"
+format-prefix-padding-left = 2
 format-prefix-foreground = ${colors.pink}
 exec = ~/.config/scripts/fanspeed
 interval = 10
@@ -136,16 +140,20 @@ interface = wlo1
 interval = 3.0
 
 format-connected = <ramp-signal>
-label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
+;label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
+label-connected =%{A1:alacritty -e nmtui &:}Connected%{A}
 label-connected-foreground = ${colors.white}
 
 format-disconnected = <label-disconnected>
 
-label-disconnected = %{A1:alacritty -e nmtui &:}  󰖪%{A}
+label-disconnected = %{A1:alacritty -e nmtui &:}󰖪 %{A}
+label-disconnected-padding-left = 2
 label-disconnected-foreground = ${colors.red}
 label-disconnected-background = ${colors.grey}
 
-ramp-signal-0 = %{A1:alacritty -e nmtui &:}  󰖩%{A}
+ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰖩%{A}
+ramp-signal-padding-left = 2
+ramp-signal-padding-right = 1
 ramp-signal-foreground = ${colors.orange}
 ramp-signal-background = ${colors.grey}
 
@@ -161,25 +169,23 @@ label-full-foreground = ${colors.white}
 format-charging = <animation-charging>
 label-charging-foreground = ${colors.white}
 
-animation-charging-0 = "    "
-animation-charging-1 = "    "
-animation-charging-2 = "    "
-animation-charging-3 = "    "
-animation-charging-4 = "    "
+animation-charging-0 = "   "
+animation-charging-1 = "   "
+animation-charging-2 = "   "
+animation-charging-3 = "   "
+animation-charging-4 = "   "
 
-animation-charging-background = ${colors.grey}
 animation-charging-foreground = ${colors.green}
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity>
 label-discharging-foreground = ${colors.white}
 
-ramp-capacity-0 = "%{F#FF6E6E}    %{F-}"
-ramp-capacity-1 = "%{F#FF6E6E}    %{F-}"
-ramp-capacity-2 = "%{F#69FF94}    %{F-}"
-ramp-capacity-3 = "%{F#69FF94}    %{F-}"
-ramp-capacity-4 = "%{F#69FF94}    %{F-}"
-
+ramp-capacity-0 = "%{F#FF6E6E}   %{F-}"
+ramp-capacity-1 = "%{F#FF6E6E}   %{F-}"
+ramp-capacity-2 = "%{F#69FF94}   %{F-}"
+ramp-capacity-3 = "%{F#69FF94}   %{F-}"
+ramp-capacity-4 = "%{F#69FF94}   %{F-}"
 ramp-capacity-background = ${colors.grey}
 
 [module/filesystem]
@@ -203,12 +209,14 @@ fixed-values = true
 ;;spacing = 4
 
 format-mounted = <label-mounted>
-format-mounted-prefix = "  󰉋 "
+format-mounted-prefix = "󰉋 "
 format-mounted-prefix-font = 3
+format-mounted-prefix-padding-left = 2
 format-mounted-prefix-foreground = ${colors.purple}
 
 format-unmounted = <label-unmounted>
-format-unmounted-prefix = "  󰇑"
+format-unmounted-prefix = "󰇑"
+format-unmounted-prefix-padding-left = 2
 
 ; Available tokens:
 ;   %mountpoint%
@@ -229,7 +237,8 @@ ramp-capacity-framerate = 750
 [module/bluetooth]
 type = custom/text
 
-content = 󰂯
+content = "󰂯"
+content-background = ${colors.grey}
 content-foreground = ${colors.cyan}
 
 click-left = ~/.config/scripts/toggle-bluetooth
