--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -120,7 +120,7 @@ ramp-foreground = ${colors.red}
 [module/powermenu]
 type = custom/text
 
-content = " 󰤆"
+content = "󰤆"
 content-background = ${colors.grey}
 content-foreground = ${colors.red}
 
@@ -141,19 +141,19 @@ interval = 3.0
 
 format-connected = <ramp-signal>
 ;label-connected =%{A1:alacritty -e nmtui &:}%essid%%{A}
-label-connected =%{A1:alacritty -e nmtui &:}Connected%{A}
 label-connected-foreground = ${colors.white}
 
 format-disconnected = <label-disconnected>
 
-label-disconnected = %{A1:alacritty -e nmtui &:}󰖪 %{A}
+label-disconnected = %{A1:alacritty -e nmtui &:}󰖪%{A}
 label-disconnected-padding-left = 2
+label-disconnected-padding-right = 2
 label-disconnected-foreground = ${colors.red}
 label-disconnected-background = ${colors.grey}
 
 ramp-signal-0 = %{A1:alacritty -e nmtui &:}󰖩%{A}
 ramp-signal-padding-left = 2
-ramp-signal-padding-right = 1
+ramp-signal-padding-right = 2
 ramp-signal-foreground = ${colors.orange}
 ramp-signal-background = ${colors.grey}
 
@@ -176,6 +176,7 @@ animation-charging-3 = "   "
 animation-charging-4 = "   "
 
 animation-charging-foreground = ${colors.green}
+animation-charging-background = ${colors.grey}
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity>
@@ -185,7 +186,7 @@ ramp-capacity-0 = "%{F#FF6E6E}   %{F-}"
 ramp-capacity-1 = "%{F#FF6E6E}   %{F-}"
 ramp-capacity-2 = "%{F#69FF94}   %{F-}"
 ramp-capacity-3 = "%{F#69FF94}   %{F-}"
-ramp-capacity-4 = "%{F#69FF94}   %{F-}"
+ramp-capacity-4 = "%{F#69FF94}  %{F-}"
 ramp-capacity-background = ${colors.grey}
 
 [module/filesystem]
