--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -25,7 +25,7 @@ module-margin-left = 0
 
 modules-left = sep launcher bspwm sep2
 modules-center =
-modules-right = backlight filesystem memory cpu temperature fanspeed date sep pulseaudio wlan battery powermenu sep2
+modules-right = backlight filesystem memory cpu temperature fanspeed  date sep battery sep2 sep pulseaudio wlan powermenu sep2
 
 include-file = $HOME/.config/polybar/fonts.ini
 
@@ -55,7 +55,7 @@ padding-left = 1
 
 modules-left = sep launcher bspwm sep2
 modules-center =
-modules-right = backlight filesystem memory cpu temperature fanspeed date sep pulseaudio wlan battery powermenu sep2
+modules-right = backlight filesystem memory cpu temperature fanspeed  date sep battery sep2 sep pulseaudio wlan powermenu sep2
 
 include-file = $HOME/.config/polybar/fonts.ini
 
