--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,15 +1,25 @@
-################
-# picom config #
-################
+#Shadow
+shadow = true;
+shadow-radius = 15;
+shadow-offset-y = -11;
+shadow-offset-x = -11;
+shadow-opacity = 0.5;
+shadow-exclude = [
+  "class_g = 'Polybar'",
+]
 
-# efects-config
-shadow = false;
-fading = false;
+#Fading
+fading = true;
+fade-in-step = 0.075;
+fade-out-step = 0.075;
 
-# corners
-corner-radius = 8;
-round-borders = 1;
+#Corners
+corner-radius = 10;
+round-borders = 0;
 rounded-corners-exclude = [
+  "class_g = 'Polybar'",
+  "class_g = 'Rofi'",
+  "window_type = 'tooltip'",
 ];
 
 # vsync
