--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -45,6 +45,7 @@ label-occupied-foreground = ${colors.secondary}
 label-occupied-padding = 1
 
 label-urgent = 󰐾
+label-urgent-background = ${colors.grey}
 label-urgent-foreground = ${colors.red}
 label-urgent-padding = 1
 
@@ -60,14 +61,15 @@ interval = 5
 date =
 date-alt = " %Y-%m-%d"
 
-time = "%I:%M %p%{F-}  "
-time-alt = "%{F#ffffff}󰃭 %a, %b %d%{F-}  "
+time = "%I:%M %p%{F-}"
+time-alt = "%{F#ffffff}󰃭 %a, %b %d%{F-}"
 
 format-prefix = "󰥔"
+format-prefix-background = ${colors.grey}
 format-prefix-foreground = ${colors.white}
-format-prefix-padding-left = 2
 
 label = %date% %time%
+label-background = ${colors.grey}
 label-foreground = ${colors.white}
 
 [module/memory]
@@ -109,7 +111,9 @@ format = <ramp> <label>
 format-warn = <ramp> <label-warn>
 
 label = %temperature-c%
+label-padding-right = 2
 label-warn = %temperature-c%
+label-warn-padding-right = 2
 
 ramp-0 = "󰔐"
 ramp-padding-left = 2
@@ -186,7 +190,7 @@ ramp-capacity-0 = "%{F#FF6E6E}   %{F-}"
 ramp-capacity-1 = "%{F#FF6E6E}   %{F-}"
 ramp-capacity-2 = "%{F#69FF94}   %{F-}"
 ramp-capacity-3 = "%{F#69FF94}   %{F-}"
-ramp-capacity-4 = "%{F#69FF94}  %{F-}"
+ramp-capacity-4 = "%{F#69FF94}   %{F-}"
 ramp-capacity-background = ${colors.grey}
 
 [module/filesystem]
@@ -255,6 +259,15 @@ content-background = ${colors.grey}
 content-foreground = ${colors.cyan}
 
 click-left = rofi -no-lazy-grab -show drun -theme $HOME/.config/rofi/themes/launcher.rasi
+
+[module/uptime]
+type = custom/script
+interval = 30
+exec = ~/.config/scripts/uptime
+format = "<label>  "
+format-prefix = "󰋚 "
+format-foreground = ${colors.foreground}
+format-prefix-foreground = ${colors.cyan}
 
 [module/sep]
 type = custom/text
