--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Matcha-dark-aliz
 gtk-icon-theme-name=Papirus-Dark
-gtk-font-name=Cantarell 11
+gtk-font-name=Iosevka 11
 gtk-cursor-theme-name=volantes_light_cursors
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
