--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -48,7 +48,7 @@
 		"critical": 15
 },
 	"format": "{icon}  {capacity}%",
-	"format-charging": "{capacity}%  ",
+	"format-charging": "{icon}  {capacity}%",
 	"format-icons": [" ", " ", " ", " ", " "]
 },
 
@@ -62,8 +62,7 @@
 
 "pulseaudio": {
         "format": "{icon} {volume}%",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-muted": " {format_source}",
+        "format-muted": "󰖁 Muted",
         "format-icons": {
             "default": ["󰕾"]
 			},
@@ -85,10 +84,7 @@
 
 "memory": {
     "interval": 30,
-    "format": "  {used:0.1f} Gb",
+    "format": "  {used:0.1f} GB",
     "max-length": 15
 },
 }
-
-
-
