--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -4,7 +4,7 @@
 "position":"top",
 "modules-left": ["sway/workspaces", "sway/mode"],
 "modules-center": [],
-"modules-right": ["cpu", "memory", "temperature", "network", "pulseaudio", "backlight", "battery", "clock", "tray"],
+"modules-right": ["cpu", "memory", "temperature", "pulseaudio", "backlight", "clock", "network", "battery", "custom/power", "tray"],
 
 "sway/workspaces": {
 "all-outputs": true,
@@ -32,6 +32,7 @@
 },
 
 "clock": {
+	"format": "󰥔 {:%H:%M}",
 	"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
 	"format-alt": "{:%Y-%m-%d}",
 },
@@ -47,25 +48,30 @@
 		"warning": 30,
 		"critical": 15
 },
-	"format": "{icon}  {capacity}%",
+	"format": "{icon}",
 	"format-charging": "{icon}  {capacity}%",
-	"format-icons": [" ", " ", " ", " ", " "]
+	"format-icons": ["󰁺", "󰁼", "󰁾", "󰂀", "󰂂", "󰁹"],
+	"tooltip-format": "Battery at {capacity}%"
 },
 
 "network": {
-	"format-wifi": "󰖩 {essid}",
+	"format-wifi": "󰖩",
         "format-ethernet": "{ipaddr}/{cidr}  ",
-        "tooltip-format": "{ifname} via {gwaddr}  ",
+       // "tooltip-format": "{ifname} via {gwaddr}  ",
+        "tooltip-format": " Connect to {essid}",
         "format-linked": "{ifname} (No IP)  ",
-        "format-disconnected": "󰖪 Disconnected",
+        "format-disconnected": "󰖪",
+	"on-click": "alacritty -e nmtui"
 },
 
 "pulseaudio": {
-        "format": "{icon} {volume}%",
+        "format": "{icon} {volume}%   {source_volume}%",
         "format-muted": "󰖁 Muted",
         "format-icons": {
             "default": ["󰕾"]
 			},
+	"scroll-step": 5,
+	"on-click": "pavucontrol"
 },
 
 "cpu": {
@@ -87,4 +93,9 @@
     "format": "  {used:0.1f} GB",
     "max-length": 15
 },
+
+"custom/power": {
+		"format": "󰐥",
+},
+
 }
