updated some files

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -49,7 +49,7 @@
 		"critical": 15
 },
 	"format": "{icon}",
-	"format-charging": "{icon}  {capacity}%",
+	"format-charging": "{icon}",
 	"format-icons": ["󰁺", "󰁼", "󰁾", "󰂀", "󰂂", "󰁹"],
 	"tooltip-format": "Battery at {capacity}%"
 },
