--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,9 +18,11 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-	output * bg /home/paolo/Pictures/Wallpapers/2022.png fill
+	output * bg /home/paolo/Pictures/moutain fill
 
-	#output HDMI-A-1 resolution 1920x1080 position 1920,0
+	output DP-3 resolution 1366x768
+
+	workspace 10 output DP-3
 
 # Keybinds
 
@@ -145,6 +147,9 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
  
         bindsym --locked $mod+l exec swaylock
         bindsym --locked print exec grimshot save area
+
+	bindsym alt+f exec nautilus
+	bindsym alt+b exec librewolf
 
 # Idle
   	 exec swayidle -w \
