--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -1,4 +1,4 @@
-image=$HOME/Pictures/adwaita.png
+image=$HOME/Pictures/maid.png
 font=Iosevka Nerd Font
 indicator-radius=100
 indicator-thickness=20
