--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -43,73 +43,6 @@ mouse:
 
 draw_bold_text_with_bright_colors: true
 
-colors:
-
-  primary:
-    background: '#282828'
-    foreground: '#ebdbb2'
-    bright_foreground: '#ffffff'
-
-  cursor:
-    text: CellBackground
-    cursor: CellForeground
-
-  vi_mode_cursor:
-    text: CellBackground
-    cursor: CellForeground
-
-  search:
-
-    matches:
-      foreground: '#44475a'
-      background: '#50fa7b'
-
-    focused_match:
-      foreground: '#44475a'
-      background: '#ffb86c'
-
-    bar:
-      background: '#282a36'
-      foreground: '#f8f8f2'
-
-  hints:
-
-    start:
-      foreground: '#282a36'
-      background: '#f1fa8c'
-
-    end:
-      foreground: '#f1fa8c'
-      background: '#282a36'
-
-  line_indicator:
-    foreground: None
-    background: None
-
-  selection:
-    text: CellForeground
-    background: '#fbf1c7'
-
-  normal:
-    black: '#282828'
-    red: '#cc241d'
-    green: '#98971a'
-    yellow: '#d79921'
-    blue: '#458588'
-    magenta: '#b15186'
-    cyan: '#689d6a'
-    white: '#ebdbb2'
-
-  bright:
-    black: '#928374'
-    red: '#fb4934'
-    green: '#b8bb26'
-    yellow: '#fabd2f'
-    blue: '#83a598'
-    magenta: '#d3869b'
-    cyan: '#8ec07c'
-    white: '#fbf1c7'
-
 dynamic_title: true
 
 key_bindings:
@@ -130,3 +63,6 @@ key_bindings:
   - { key: PageDown,  mods: None,          action: ScrollPageDown, mode: ~Alt  }
   - { key: Home,      mods: Shift,         action: ScrollToTop,    mode: ~Alt  }
   - { key: End,       mods: Shift,         action: ScrollToBottom, mode: ~Alt  }
+
+import:
+  - ~/.config/alacritty/paradise.yml
