--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,7 +18,7 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-	output * bg /home/paolo/Pictures/material.png fill
+	output * bg /home/paolo/Pictures/mountain.png fill
 
 	output DP-3 resolution 1366x768
 
@@ -148,8 +148,11 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
         bindsym --locked $mod+l exec swaylock
         bindsym --locked print exec grimshot save area
 
-	bindsym alt+f exec nautilus
-	bindsym alt+b exec librewolf
+	      bindsym alt+f exec nautilus
+	      bindsym alt+b exec firefox
+
+# Cursor theme
+  seat seat0 xcursor_theme Volantes 19
 
 # Disable laptop's display when closed
 bindswitch lid:on output eDP-1 disable
@@ -168,7 +171,7 @@ for_window [app_id="(pavucontrol)"] floating enable
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 # Autostart
-exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+#exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec mako
 xwayland enable
 # Gaps
