--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,7 +18,7 @@ input "1267:12596:ASUE140A:00_04F3:3134_Touchpad" {
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-	output * bg /home/paolo/Pictures/mountain.png fill
+	output * bg /home/paolo/Pictures/moutain.jpg fill
 
 	output DP-3 resolution 1366x768
 
@@ -171,7 +171,6 @@ for_window [app_id="(pavucontrol)"] floating enable
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 # Autostart
-#exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec mako
 xwayland enable
 # Gaps
